and a phoenix rises!

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,9 @@
         width: 300px;
         margin-bottom:5px;
       }
+      input#user_id {
+        color: #eee;
+      }
       input[type='button'] {
         background: #ccc;
       }
@@ -40,8 +43,8 @@
   <body>
     <div class="track" id="1">
       <div class="center">
-        <input id="asker_id" type="text" placeholder="Your name" value="friend">
-        <input id="user_id" type="text" placeholder="User" value="agarwal.siddhant23@gmail.com">
+        <input id="asker_id" type="text" placeholder="Your name" value="Tim">
+        <input id="user_id" type="text" placeholder="User" value="nerdy.sid@gmail.com">
         <input type="submit" value="Track" onclick="sendLocationRequest();">
       </div>
     </div>
